--- a/githubwebsite/githubwebsite/calendar.html
+++ b/githubwebsite/githubwebsite/calendar.html
@@ -1,12 +1,8 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=calendar.html" />
-    <title>homepage</title>
+    <title>calendar</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
-    <script src="app.js"></script>
 </head>
 <body>
     <nav>
@@ -16,7 +12,7 @@
             <li><a href="events.html">Activities</a></li>
         </ul>
     </nav>
-
-    <div id="content"></div>
+    <wbr />
+    <h1>THIS SECTION NOT FUNCTIONAL.</h1>
 </body>
 </html>
