--- a/githubwebsite/githubwebsite/events.html
+++ b/githubwebsite/githubwebsite/events.html
@@ -1,12 +1,8 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=calendar.html" />
-    <title>homepage</title>
+    <title>food</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
-    <script src="app.js"></script>
 </head>
 <body>
     <nav>
@@ -17,6 +13,9 @@
         </ul>
     </nav>
 
-    <div id="content"></div>
+    <wbr />
+
+    <h1>THIS SECTION NOT FUNCTIONAL.</h1>
+
 </body>
 </html>
