--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+    <meta http-equiv="refresh" content="0; url=calendar.html" />
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="homepage : ">
