changed nav menu
no longer using a pre html5 hack.  we are now fully committed to using
the html5 nav tag.  also moved the nav menu to a javascript file so its
not duplicated.

--- a/githubwebsite/githubwebsite/events.html
+++ b/githubwebsite/githubwebsite/events.html
@@ -5,14 +5,7 @@
     <link rel="stylesheet" href="app.css" type="text/css" />
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="food.html">Meal Plan</a></li>
-            <li><a href="calendar.html">Calendar</a></li>
-            <li><a href="events.html">Activities</a></li>
-        </ul>
-    </nav>
-    <wbr />
+    <script src="nav_menu.js"></script>
     <div class="menu">
         <ul><li><a href="add_event.html">New Event...</a></li></ul>
     </div>
