--- a/events.html
+++ b/events.html
@@ -5,17 +5,10 @@
     <link rel="stylesheet" href="app.css" type="text/css" />
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="food.html">Meal Plan</a></li>
-            <li><a href="calendar.html">Calendar</a></li>
-            <li><a href="events.html">Activities</a></li>
-        </ul>
-    </nav>
-
-    <wbr />
-
-    <h1>THIS SECTION NOT FUNCTIONAL.</h1>
-
+    <script src="nav_menu.js"></script>
+    <div class="menu">
+        <ul><li><a href="add_event.html">New Event...</a></li></ul>
+    </div>
+    <div id="event_list"><h1>THIS SECTION NOT FUNCTIONAL.</h1></div>
 </body>
 </html>
