--- a/food.html
+++ b/food.html
@@ -5,16 +5,7 @@
     <link rel="stylesheet" href="app.css" type="text/css" />
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="food.html">Meal Plan</a></li>
-            <li><a href="calendar.html">Calendar</a></li>
-            <li><a href="events.html">Activities</a></li>
-        </ul>
-    </nav>
-
-    <wbr />
-
+    <script src="nav_menu.js"></script>
     <h1>THIS SECTION NOT FUNCTIONAL.</h1>
 
 </body>
