--- a/add_event.html
+++ b/add_event.html
@@ -4,22 +4,21 @@
     <title>new event</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
     <style>
-        nav ul {
-            width: 50px;
+        nav {
+            width: 150px;
         }
 
-            nav ul li a {
+            nav a {
                 color: #fff;
             }
     </style>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a>New Event</a></li>
-        </ul>
-    </nav>
-    <wbr />
+    <div class="nav_div">
+        <nav>
+            <a>New Event</a>
+        </nav>
+    </div>
     <div class="menu">
         <ul><li><a href="events.html">Cancel.</a></li></ul>
     </div>
