--- a/food.html
+++ b/food.html
@@ -3,10 +3,15 @@
 <head>
     <title>food</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="food.js"></script>
 </head>
 <body>
     <script src="nav_menu.js"></script>
+    <div id="alergy_list"></div>
+    <div id="meal_calendar"></div>
+    <wbr/>
     <h1>THIS SECTION NOT FUNCTIONAL.</h1>
-
+    <!--http://code.daypilot.org/17910/html5-event-calendar-open-source-->
 </body>
 </html>
