--- a/index.html
+++ b/index.html
@@ -1,45 +1,22 @@
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
 
-  <head>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
     <meta http-equiv="refresh" content="0; url=calendar.html" />
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="homepage : ">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
     <title>homepage</title>
-  </head>
+    <link rel="stylesheet" href="app.css" type="text/css" />
+    <script src="app.js"></script>
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="food.html">Meal Plan</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
+            <li><a href="events.html">Activities</a></li>
+        </ul>
+    </nav>
 
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/samandlorien">View on GitHub</a>
-
-          <h1 id="project_title">homepage</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p>i love you, lorien</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+    <div id="content"></div>
+</body>
 </html>
