--- a/githubwebsite/githubwebsite/food.html
+++ b/githubwebsite/githubwebsite/food.html
@@ -8,10 +8,23 @@
 </head>
 <body>
     <script src="nav_menu.js"></script>
-    <div id="alergy_list"></div>
+    <div id="allergy_list" class="left-side-list">
+        <nav class="buttons">
+            <a href="food.html">Add Preference</a>
+        </nav>
+    </div>
+    <div id="utensile_list" class="right-side-list"><p>Available Items:</p></div>
     <div id="meal_calendar"></div>
-    <wbr/>
-    <h1>THIS SECTION NOT FUNCTIONAL.</h1>
-    <!--http://code.daypilot.org/17910/html5-event-calendar-open-source-->
+
+    <script>
+    /*    var data = { 'bob': 'foo', 'paul': 'dog' };
+        $.ajax({
+            url: url,
+            type: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify(data),
+            dataType: 'json'
+        });*/
+    </script>
 </body>
 </html>
