--- a/githubwebsite/githubwebsite/food.html
+++ b/githubwebsite/githubwebsite/food.html
@@ -19,17 +19,17 @@
     <div id="preference_div" class="hide_background" style="display:none">
         <form id="preference_form">
             <p>
-                <input type="text" name="person" value="sam">
-                <select name="reaction">
+                <input type="text" name="person" id="form_person" value="someone">
+                <select name="reaction" id="form_reaction">
                     <option value="0" selected>likes</option>
                     <option value="1">is allergic to</option>
                     <option value="2">does not like</option>
                 </select>
             </p>
             <p>
-                <input type="text" name="food" value="cheese">
+                <input type="text" name="food" id="form_food" value="food">
                 <input type="button" value="Cancel" onclick="algy_hide()" class="inverse_button">
-                <input type="submit" value="Okay" class="inverse_button">
+                <input type="button" value="Add" onclick="algy_submit()" class="inverse_button">
             </p>
         </form>
     </div>
