--- a/githubwebsite/githubwebsite/calendar.html
+++ b/githubwebsite/githubwebsite/calendar.html
@@ -3,9 +3,20 @@
 <head>
     <title>calendar</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
+    <script src="daypilot/scripts/daypilot-all.min.js" type="text/javascript"></script>
 </head>
 <body>
     <script src="nav_menu.js"></script>
+
+
     <h1>THIS SECTION NOT FUNCTIONAL.</h1>
+
+    <div id="dp"></div>
+
+
+    <script type="text/javascript">
+        var dp = new DayPilot.Calendar("dp");
+        dp.init();
+    </script>
 </body>
 </html>
