--- a/food.html
+++ b/food.html
@@ -8,10 +8,42 @@
 </head>
 <body>
     <script src="nav_menu.js"></script>
-    <div id="alergy_list"></div>
+    <div id="allergy_list" class="left-side-list">
+        <nav class="buttons">
+            <button onclick="algy_show()" class="button">Add Preference</button>
+        </nav>
+    </div>
+    <div id="utensile_list" class="right-side-list"><p>Available Items:</p></div>
     <div id="meal_calendar"></div>
-    <wbr/>
-    <h1>THIS SECTION NOT FUNCTIONAL.</h1>
-    <!--http://code.daypilot.org/17910/html5-event-calendar-open-source-->
+
+    <div id="preference_div" class="hide_background" style="display:none">
+        <form id="preference_form">
+            <p>
+                <input type="text" name="person" id="form_person" value="someone">
+                <select name="reaction" id="form_reaction">
+                    <option value="0" selected>likes</option>
+                    <option value="1">is allergic to</option>
+                    <option value="2">does not like</option>
+                </select>
+            </p>
+            <p>
+                <input type="text" name="food" id="form_food" value="food">
+                <input type="button" value="Cancel" onclick="algy_hide()" class="inverse_button">
+                <input type="button" value="Add" onclick="algy_submit()" class="inverse_button">
+            </p>
+        </form>
+    </div>
+
+
+    <script>
+        /*    var data = { 'bob': 'foo', 'paul': 'dog' };
+            $.ajax({
+                url: url,
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify(data),
+                dataType: 'json'
+            });*/
+    </script>
 </body>
 </html>
