--- a/githubwebsite/githubwebsite/food.html
+++ b/githubwebsite/githubwebsite/food.html
@@ -19,6 +19,23 @@
 
     <div id="meal_calendar"></div>
 
+    <div style="clear:both;">
+        <h3>Planned Meals:</h3>
+        <ul>
+            <li>TO DO</li>
+        </ul>
+        <h3>Things we will be bringing with us to share:</h3>
+        <ul>
+            <li>Olive Oil - S&L</li>
+            <li>Salt - S&L</li>
+            <li>Pepper - S&L</li>
+        </ul>
+        <h3>Things we need to get in NC to share:</h3>
+        <ul>
+            <li>Heavy Cream - S&L</li>
+        </ul>
+    </div>
+
     <div id="preference_div" class="hide_background" style="display:none">
         <form id="preference_form">
             <p>
